--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Color Game</title>
 </head>
 <body>
-	<h1>Narsings CI-CD Lab - GIT-Jenkins-Dockerswarm</h1>
+	<h1>Narsings CI-CD Lab - GIT-Jenkins-Dockerswarm ex1</h1>
 	<div id="smallcont">
 		<div></div>
 		<div id="try1">Lets Play</div>
